# cs361_main_program

./: .env-example  README.org
backend/: README.md  pyproject.toml  requirements.txt  ruff.toml
backend/app/: crud.py  main.py  models.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: gifts.py  login.py  users.py
backend/app/core/: config.py  db.py  security.py
frontend/: .env  .gitignore  README.org  index.html  package.json  pnpm-lock.yaml
frontend/src/: api.js  error-page.jsx  fetchers.js  index.css  main.jsx  utils.js
frontend/src/components/: item.jsx  myItem.jsx  productLink.jsx  protectedRoute.jsx
frontend/src/routes/: addBulkText.jsx  addByCSV.jsx  addItem.jsx  changeName.jsx  delete.jsx  editItem.jsx  exportToCSV.jsx  index.jsx  login.jsx  myWishlist.jsx  register.jsx  root.jsx  wishlist.jsx
